Added login forms

--- a/app/src/main/res/layout-large/fragment_authorization.xml
+++ b/app/src/main/res/layout-large/fragment_authorization.xml
@@ -7,9 +7,18 @@
     tools:context=".presentation.AuthorizationFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-
+        
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineTop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.30" />
+
+
 
         <TextView
             android:id="@+id/enter"
@@ -19,7 +28,7 @@
             android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />
 
         <TextView
             android:id="@+id/text_1"
@@ -70,9 +79,9 @@
             android:text="@string/further"
             android:textAllCaps="false"
             android:textSize="17sp"
-            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
-            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@id/linerLay" />
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toBottomOf="@+id/linerLay" />
 
         <TextView
             android:id="@+id/text_3"
@@ -94,14 +103,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.05" />
+            app:layout_constraintGuide_percent="0.30" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineRight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.95" />
+            app:layout_constraintGuide_percent="0.70" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
