--- a/app/src/main/res/layout-large/fragment_authorization.xml
+++ b/app/src/main/res/layout-large/fragment_authorization.xml
@@ -69,6 +69,16 @@
                 android:selectAllOnFocus="true"
                 android:stretchColumns="1" />
         </LinearLayout>
+        <TextView
+            android:id="@+id/text_error"
+            android:visibility="gone"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/error"
+            android:textSize="17sp"
+            android:textColor="@color/red"
+            app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toBottomOf="@id/linerLay" />
 
         <Button
             android:id="@+id/button"
@@ -111,6 +121,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.70" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
