--- a/app/src/main/res/layout/fragment_authorization.xml
+++ b/app/src/main/res/layout/fragment_authorization.xml
@@ -60,13 +60,25 @@
                 android:selectAllOnFocus="true"
                 android:stretchColumns="1" />
         </LinearLayout>
+        <TextView
+            android:id="@+id/text_error"
+            android:visibility="gone"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/error"
+            android:textSize="17sp"
+            android:textColor="@color/red"
+            app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toBottomOf="@id/linerLay" />
 
         <Button
             android:id="@+id/button"
             style="@style/MyStyle.ButtonMain"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="20sp"
+            android:layout_marginTop="30sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
             android:text="@string/further"
             android:textAllCaps="false"
             android:textSize="17sp"
@@ -103,6 +115,16 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.95" />
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
