--- a/app/src/main/res/layout-large/fragment_confirmation_phone.xml
+++ b/app/src/main/res/layout-large/fragment_confirmation_phone.xml
@@ -7,28 +7,36 @@
     tools:context=".presentation.ConfirmationPhoneFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineTop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.30" />
 
         <TextView
             android:id="@+id/enter"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/phone_confirmation"
+            android:textSize="45sp"
+            android:textStyle="bold"
+            app:flow_horizontalAlign="center"
             app:layout_constrainedHeight="true"
             app:layout_constrainedWidth="true"
-            android:textSize="35sp"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintLeft_toRightOf="@id/guidelineLeft"
+            app:layout_constraintTop_toTopOf="@id/guidelineTop" />
 
         <TextView
             android:id="@+id/text_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/confirmation_phone_text_1"
-            android:textSize="17sp"
+            android:textSize="27sp"
             app:layout_constrainedHeight="true"
             app:layout_constrainedWidth="true"
             app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
@@ -48,6 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/code_stars"
+                android:textSize="27dp"
                 android:inputType="numberPassword"
                 android:selectAllOnFocus="true"
                 android:stretchColumns="1" />
@@ -58,7 +67,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/invalid_code"
-            android:textSize="17sp"
+            android:textSize="27sp"
             android:textColor="@color/red"
             app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
             app:layout_constraintTop_toBottomOf="@id/linerLay" />
@@ -71,7 +80,7 @@
             android:lineSpacingExtra="3dp"
             android:text="@string/confirmation_phone_text_2"
             android:textColor="@color/purple_700"
-            android:textSize="17sp"
+            android:textSize="27sp"
             app:layout_constrainedHeight="true"
             app:layout_constrainedWidth="true"
             app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
@@ -84,14 +93,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.05" />
+            app:layout_constraintGuide_percent="0.30" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineRight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.95" />
+            app:layout_constraintGuide_percent="0.70" />
 
         <ProgressBar
             android:id="@+id/progressBar"
