--- a/app/src/main/res/layout/fragment_confirmation_phone.xml
+++ b/app/src/main/res/layout/fragment_confirmation_phone.xml
@@ -52,22 +52,12 @@
                 android:selectAllOnFocus="true"
                 android:stretchColumns="1" />
         </LinearLayout>
-        <TextView
-            android:id="@+id/text_error"
-            android:visibility="gone"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/invalid_code"
-            android:textSize="17sp"
-            android:textColor="@color/red"
-            app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@id/linerLay" />
 
         <TextView
             android:id="@+id/text_3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="5sp"
             android:lineSpacingExtra="3dp"
             android:text="@string/confirmation_phone_text_2"
             android:textColor="@color/purple_700"
@@ -78,6 +68,17 @@
             app:layout_constraintRight_toLeftOf="@id/guidelineRight"
             app:layout_constraintTop_toBottomOf="@+id/linerLay" />
 
+        <TextView
+            android:id="@+id/text_error"
+            android:visibility="gone"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/invalid_code"
+            android:textSize="17sp"
+            android:layout_marginTop="3dp"
+            android:textColor="@color/red"
+            app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toBottomOf="@id/text_3" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineLeft"
