Все формы готовы

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,5 +9,9 @@
         <item name="android:background">@drawable/button_main</item>
     </style>
 
+    <style name="MyStyle.ButtonMainBlue">
+        <item name="android:background">@drawable/buy_with_cashback</item>
+    </style>
+
     <style name="MyStyle">my_style</style>
 </resources>
