--- a/app/src/main/res/drawable/cashback_background_view.xml
+++ b/app/src/main/res/drawable/cashback_background_view.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android = "http://schemas.android.com/apk/res/android"
-    android:shape = "rectangle" >
-    <corners android:radius = "150dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="150dp" />
     <!-- This is the border color -->
-    <stroke android:width = "2dp" android:color = "#ccc" />
+    <stroke
+        android:width="2dp"
+        android:color="#ccc" />
     <!--- This is the background color -->
-    <solid android:color = "#E91E63" />
-</ shape >
+    <solid android:color="@color/pink" />
+</shape>
