--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -7,17 +7,16 @@
     android:background="?android:attr/selectableItemBackground">
 
     <ImageView
-        android:id="@+id/photoImageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
+        android:id="@+id/pager_placeholder_image_view1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="1:1"
         android:layout_marginTop="6dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_baseline_image_24" />
+        app:layout_constraintStart_toEndOf="@id/guideline1"/>
 
     <TextView
-        android:id="@+id/nameProductTextView1"
+        android:id="@+id/name_company_text_view1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -28,19 +27,18 @@
         app:layout_constrainedHeight="true"
         app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toStartOf="@id/guideline4"
-        app:layout_constraintStart_toEndOf="@id/photoImageView1"
-        app:layout_constraintTop_toTopOf="@id/photoImageView1"
+        app:layout_constraintStart_toEndOf="@id/pager_placeholder_image_view1"
+        app:layout_constraintTop_toTopOf="@id/pager_placeholder_image_view1"
         tools:text="Мобильный телефон Apple iPhone 12 64GB white" />
 
     <ImageView
-        android:id="@+id/imageCompanyView"
+        android:id="@+id/image_company_view"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="6dp"
-        app:layout_constraintStart_toEndOf="@id/photoImageView1"
-        app:layout_constraintTop_toBottomOf="@id/nameProductTextView1"
-        tools:src="@drawable/ic_baseline_image_24" />
+        app:layout_constraintStart_toEndOf="@id/pager_placeholder_image_view1"
+        app:layout_constraintTop_toBottomOf="@id/name_company_text_view1" />
 
     <TextView
         android:id="@+id/priceTextView1"
@@ -54,12 +52,12 @@
         app:layout_constrainedHeight="true"
         app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toStartOf="@id/guideline4"
-        app:layout_constraintStart_toEndOf="@id/photoImageView1"
-        app:layout_constraintTop_toBottomOf="@id/imageCompanyView"
+        app:layout_constraintStart_toEndOf="@id/pager_placeholder_image_view1"
+        app:layout_constraintTop_toBottomOf="@id/image_company_view"
         tools:text="45990,00 RUB" />
 
     <TextView
-        android:id="@+id/cashbackTextView1"
+        android:id="@+id/cashback_text_view1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -70,8 +68,8 @@
         android:paddingRight="7dp"
         android:paddingBottom="5dp"
         android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@id/nameProductTextView1"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@id/name_company_text_view1"
         app:layout_constraintTop_toBottomOf="@id/priceTextView1"
         tools:text="до 20,00%" />
 
@@ -80,11 +78,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="photoImageView1,cashbackTextView1" />
+        app:constraint_referenced_ids="pager_placeholder_image_view1,cashback_text_view1" />
+    <View
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="#BFBBBB"
+        android:layout_marginTop="6dp"
+        app:layout_constraintStart_toEndOf="@id/guideline1"
+        app:layout_constraintEnd_toStartOf="@id/guideline4"
+        app:layout_constraintTop_toBottomOf="@id/barrier"/>
 
     <Space
         android:layout_width="wrap_content"
-        android:layout_height="6dp"
+        android:layout_height="7dp"
         app:layout_constraintTop_toBottomOf="@id/barrier" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -92,6 +98,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.94" />
+        app:layout_constraintGuide_percent="0.96" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.04" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
