--- a/app/src/main/res/layout/item_shop.xml
+++ b/app/src/main/res/layout/item_shop.xml
@@ -7,30 +7,48 @@
     android:background="?android:attr/selectableItemBackground">
 
     <ImageView
-        android:id="@+id/photoImageView1"
+        android:id="@+id/background1"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_height="0dp"
         android:layout_marginTop="6dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/shape_image"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@id/guideline2"
+        app:layout_constraintStart_toStartOf="@id/guideline1"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/pager_placeholder_image_view1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:shapeAppearanceOverlay="@style/roundedImageView"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
+        android:background="@color/white"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@id/guideline2"
+        app:layout_constraintStart_toStartOf="@id/guideline1"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/ic_baseline_image_24" />
 
     <TextView
-        android:id="@+id/nameProductTextView1"
+        android:id="@+id/name_company_text_view1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:lines="1"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/photoImageView1"
-        app:layout_constraintTop_toBottomOf="@+id/photoImageView1"
+        android:layout_marginTop="5dp"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintStart_toStartOf="@+id/pager_placeholder_image_view1"
+        app:layout_constraintTop_toBottomOf="@+id/pager_placeholder_image_view1"
         tools:text="John Smith" />
 
     <TextView
-        android:id="@+id/cashbackTextView1"
+        android:id="@+id/cashback_text_view1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -40,16 +58,32 @@
         android:padding="5dp"
         android:textColor="@color/white"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/photoImageView1"
-        app:layout_constraintStart_toStartOf="@id/nameProductTextView1"
+        app:layout_constraintBottom_toBottomOf="@+id/pager_placeholder_image_view1"
+        app:layout_constraintStart_toStartOf="@id/name_company_text_view1"
         tools:text="до 12,00%" />
 
     <ImageView
-        android:id="@+id/photoImageView2"
+        android:id="@+id/background2"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_height="0dp"
         android:layout_marginTop="6dp"
+        android:background="@drawable/shape_image"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintStart_toStartOf="@id/guideline3"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/pager_placeholder_image_view2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
+        android:background="@color/white"
+        app:layout_constraintDimensionRatio="1:1"
+        app:shapeAppearanceOverlay="@style/roundedImageView"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintStart_toStartOf="@id/guideline3"
         app:layout_constraintTop_toTopOf="parent"
@@ -60,11 +94,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
+        android:layout_marginTop="5dp"
         android:lines="1"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/photoImageView2"
-        app:layout_constraintTop_toBottomOf="@+id/photoImageView2"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintStart_toStartOf="@+id/pager_placeholder_image_view2"
+        app:layout_constraintTop_toBottomOf="@+id/pager_placeholder_image_view2"
         tools:text="John Smith" />
 
     <TextView
@@ -78,7 +115,7 @@
         android:padding="5dp"
         android:textColor="@color/white"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/photoImageView2"
+        app:layout_constraintBottom_toBottomOf="@+id/pager_placeholder_image_view2"
         app:layout_constraintStart_toStartOf="@id/nameCompanyTextView2"
         tools:text="до 12,00%" />
 
@@ -87,7 +124,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="nameCompanyTextView2,nameProductTextView1" />
+        app:constraint_referenced_ids="nameCompanyTextView2,name_company_text_view1" />
 
     <Space
         android:layout_width="wrap_content"
