--- a/app/src/main/res/layout/fragment_information_about_element.xml
+++ b/app/src/main/res/layout/fragment_information_about_element.xml
@@ -10,22 +10,27 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/pager_placeholder_image_view1"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="6dp"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@id/guidelineTop2"
             app:layout_constraintEnd_toStartOf="@id/guideline2"
             app:layout_constraintStart_toStartOf="@id/guideline1"
-            app:layout_constraintTop_toTopOf="parent">
-            <com.google.android.material.tabs.TabLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:tabBackground="@drawable/tab_selector"
-                app:tabGravity="center"
-                app:tabIndicatorHeight="0dp"
-                android:layout_gravity="bottom" />
-        </androidx.viewpager2.widget.ViewPager2>
+            app:layout_constraintTop_toTopOf="@id/guidelineTop1" />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_gravity="bottom"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pager_placeholder_image_view1"
+            app:tabBackground="@drawable/tab_selector"
+            app:tabGravity="center"
+            app:tabIndicatorHeight="0dp"/>
 
         <TextView
             android:id="@+id/description_text_view"
@@ -38,18 +43,17 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="@id/guideline1"
-            app:layout_constraintTop_toBottomOf="@+id/pager_placeholder_image_view1"
-            tools:text="Мобильный телефон Apple iPhone 12 64GB A2403 green (зеленый)" />
+            app:layout_constraintTop_toBottomOf="@+id/tab_layout"
+            android:text="@string/text_test_1" />
 
         <ImageView
             android:id="@+id/image_company_view"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="6dp"
             app:layout_constraintStart_toStartOf="@id/guideline1"
-            app:layout_constraintTop_toBottomOf="@id/description_text_view"
-            tools:src="@drawable/ic_baseline_image_24" />
+            app:layout_constraintTop_toBottomOf="@id/description_text_view" />
 
         <TextView
             android:id="@+id/price_text_view"
@@ -62,7 +66,7 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="@id/guideline1"
             app:layout_constraintTop_toBottomOf="@+id/image_company_view"
-            tools:text="999,00 RUB" />
+            android:text="@string/text_view_2" />
 
         <androidx.constraintlayout.widget.Barrier
             android:id="@+id/barrier"
@@ -70,6 +74,7 @@
             android:layout_height="wrap_content"
             app:barrierDirection="bottom"
             app:constraint_referenced_ids="price_text_view,image_company_view,description_text_view"
+            app:layout_constraintTop_toBottomOf="@id/price_text_view"
             tools:layout_editor_absoluteY="255dp" />
 
         <TextView
@@ -84,7 +89,7 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="@id/guideline1"
             app:layout_constraintTop_toBottomOf="@id/barrier"
-            tools:text="Кешбэк" />
+            android:text="@string/text_vew_3" />
 
         <TextView
             android:id="@+id/cashback_text_view1"
@@ -101,21 +106,20 @@
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@id/guideline1"
             app:layout_constraintTop_toBottomOf="@id/cashback_text_view"
-            tools:text="до 20,00%" />
+            android:text="@string/text_view_4" />
 
         <TextView
             android:id="@+id/time_cashback_accrual_head_text_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20sp"
-            android:ellipsize="end"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintEnd_toStartOf="@id/guideline2"
             app:layout_constraintStart_toStartOf="@id/guideline1"
             app:layout_constraintTop_toBottomOf="@id/cashback_text_view1"
-            tools:text="Время начисления кэшбека" />
+            android:text="@string/text_view_5" />
 
 
         <TextView
@@ -125,10 +129,10 @@
             android:ellipsize="end"
             android:textColor="@color/black"
             android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintEnd_toStartOf="@id/guideline2"
             app:layout_constraintStart_toStartOf="@id/guideline1"
             app:layout_constraintTop_toBottomOf="@id/time_cashback_accrual_head_text_view"
-            tools:text="от 56 до 65 дней" />
+            android:text="@string/text_view_6" />
 
         <TextView
             android:id="@+id/conditions_head_text_view"
@@ -139,10 +143,10 @@
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintEnd_toStartOf="@id/guideline2"
             app:layout_constraintStart_toStartOf="@id/guideline1"
             app:layout_constraintTop_toBottomOf="@id/time_cashback_accrual_text_view1"
-            tools:text="Условия" />
+            android:text="@string/text_view_12" />
 
         <TextView
             android:id="@+id/conditions_text_view1"
@@ -151,38 +155,52 @@
             android:ellipsize="end"
             android:textColor="@color/black"
             android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintEnd_toStartOf="@id/guideline2"
             app:layout_constraintStart_toStartOf="@id/guideline1"
             app:layout_constraintTop_toBottomOf="@id/conditions_head_text_view"
-            tools:text="от 56 до 65 дней" />
+            android:text="@string/text_view_7" />
 
         <Button
             android:id="@+id/expand_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:background="?android:attr/selectableItemBackground"
             android:drawableStart="@drawable/ic_baseline_keyboard_arrow_down_24"
             android:text="@string/expand"
             android:textAllCaps="false"
             android:textColor="#3F51B5"
             android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="@+id/guideline1"
-            app:layout_constraintTop_toBottomOf="@+id/conditions_text_view1" />
+            app:layout_constraintStart_toStartOf="@id/guideline1"
+            app:layout_constraintTop_toBottomOf="@id/conditions_text_view1" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.06" />
+            app:layout_constraintGuide_percent="0.04" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.94" />
+            app:layout_constraintGuide_percent="0.96" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineTop2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.25" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineTop1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.0" />
 
         <Button
             android:id="@+id/button"
