--- a/app/src/main/res/layout/item_image_pager_view.xml
+++ b/app/src/main/res/layout/item_image_pager_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
@@ -9,12 +9,13 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:adjustViewBounds="true"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_baseline_image_24"
-        app:layout_constraintDimensionRatio="1:1"
-        android:contentDescription="@string/app_name" />
+        tools:src="@drawable/ic_baseline_image_24" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
