--- a/app/src/main/res/layout/fragment_information_about_element.xml
+++ b/app/src/main/res/layout/fragment_information_about_element.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.InformationAboutElementFragment">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -149,14 +151,26 @@
             android:text="@string/text_view_12" />
 
         <TextView
+            android:id="@+id/percent_text_view1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:textColor="@color/pink"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="@id/guideline1"
+            app:layout_constraintTop_toBottomOf="@id/conditions_head_text_view"
+            android:text="@string/percent_text_view" />
+
+        <TextView
             android:id="@+id/conditions_text_view1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:textColor="@color/black"
             android:textSize="20sp"
+            android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/guideline2"
-            app:layout_constraintStart_toStartOf="@id/guideline1"
+            app:layout_constraintStart_toEndOf="@id/percent_text_view1"
             app:layout_constraintTop_toBottomOf="@id/conditions_head_text_view"
             android:text="@string/text_view_7" />
 
@@ -202,6 +216,11 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.0" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <Button
             android:id="@+id/button"
             style="@style/MyStyle.ButtonMainBlue"
@@ -210,11 +229,13 @@
             android:layout_marginBottom="15sp"
             android:text="@string/by_with_cashback"
             android:textAllCaps="false"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:textColor="@color/white"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/guideline2"
-            app:layout_constraintStart_toStartOf="@id/guideline1" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
