--- a/app/src/main/res/layout/item_image_pager_view.xml
+++ b/app/src/main/res/layout/item_image_pager_view.xml
@@ -11,6 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="100dp"
         android:contentDescription="@string/app_name"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
